# poc-model

./: .gitignore  README.md  data-detect.yaml  environment.yml  main.py  pyproject.toml  setup.bat  trainDetection.py
cli/: checkCUDA.py
config/: base.yaml  bodytype_classification.yaml  brand_classification.yaml  car_frontal_detection.yaml
data/: DATA.md
requirements/: requirements-cpu.txt  requirements-gpu.txt
scripts/: check_gpu.py  install_requirements_auto.py  main.py  train.py
src/poc_model/core/: config.py  logger.py
src/poc_model/models/bodytype_classification/: bodytype_train.py
src/poc_model/models/brand_classification/: brand_train.py
src/poc_model/models/car_frontal_detection/: car_frontal_train.py
src/poc_model/utils/: path_utils.py
tools/test_func/: tempor.py
train_poc_model/bodytype_classification/: train.py
train_poc_model/car_frontal_detection/: benchmark.py  data.yaml  data_detect.yaml  train.py
weights/finetuned_model/: .gitkeep
