[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-model"
version = "0.1.0"
description = "AI model training project for car & frontal detection, brand classification, bodytype classification"
authors = [
    { name="Pongsatorn K.", email="pong4213@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/Pongsatorn-K633/poc-model"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
